[gd_scene load_steps=12 format=2]

[ext_resource path="res://Labels/Exit.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/mountain.png" type="Texture" id=2]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Labels/Play.tscn" type="PackedScene" id=4]
[ext_resource path="res://Labels/Profile.tscn" type="PackedScene" id=5]
[ext_resource path="res://menus/Screens_Randy/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://menus/Screens_Randy/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Labels/Settings.tscn" type="PackedScene" id=8]
[ext_resource path="res://Labels/Leaderboard.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/randy_scripts/Label.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[node name="MainMenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
margin_bottom = 4.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.198
anchor_bottom = 1.222
margin_left = -3.0
margin_top = 1.0
margin_right = 407.456
margin_bottom = 492.912
rect_scale = Vector2( 0.75, 0.6 )
texture = ExtResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_right = -270.0
margin_bottom = -229.0
custom_constants/margin_right = 300
custom_constants/margin_top = 100
custom_constants/margin_left = 300
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "	"
}

[node name="ColorRect" type="ColorRect" parent="TextureRect/MarginContainer"]
margin_left = 300.0
margin_top = 100.0
margin_right = 1072.0
margin_bottom = 899.0
color = Color( 0.192157, 0.392157, 0.552941, 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MarginContainer"]
margin_left = 300.0
margin_top = 100.0
margin_right = 1072.0
margin_bottom = 899.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 722.0
margin_bottom = 749.0

[node name="Title" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 672.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "MathStack"
align = 1

[node name="MenuOptions" type="VBoxContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 672.0
margin_bottom = 699.0
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="Button2" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions" instance=ExtResource( 4 )]
margin_top = 58.0
margin_right = 672.0
margin_bottom = 118.0
script = ExtResource( 10 )

[node name="Button3" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions" instance=ExtResource( 9 )]
margin_top = 168.0
margin_right = 672.0
margin_bottom = 228.0
script = ExtResource( 10 )
scene_to_load = ""

[node name="Button4" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions" instance=ExtResource( 5 )]
margin_top = 278.0
margin_right = 672.0
margin_bottom = 338.0
script = ExtResource( 10 )
scene_to_load = ""

[node name="Button5" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions" instance=ExtResource( 8 )]
margin_top = 388.0
margin_right = 672.0
margin_bottom = 448.0
script = ExtResource( 10 )
scene_to_load = "res://Screens/SettingsScreen.tscn"

[node name="Button6" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions" instance=ExtResource( 1 )]
margin_top = 498.0
margin_right = 672.0
margin_bottom = 558.0
script = ExtResource( 10 )
scene_to_load = "res://Screens/LoginScreen.tscn"

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions/Button6" to="." method="_on_Button6_pressed"]
